fixing responsive design on iphone

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,6 @@ body,
   html,
   body,
   #root {
-    display: none;
+    overflow-x: hidden;
   }
 }
